<resources>
    <string name="app_name">HALO User Companion</string>
    <string name="app_title">HALO</string>
    <string name="app_sub_title">User Companion</string>
    <string name="label_title_notes">Title</string>
    <string name="add_word">ic add</string>

    <!--    Bottom Navigation Bar-->
    <string name="bnv_home">Home</string>
    <string name="bnv_history">Battle Records</string>
    <string name="bnv_inventory">Inventory</string>
    <string name="bnv_spartan">Profile</string>

    <!--    Home Fragment-->
    <string name="home_title">Halo User Companion</string>
    <string name="home_search">Search forum</string>
    <string name="home_under_maintenance">Under Maintenance</string>

    <!--    Match History-->
    <string name="history_title">Match History</string>

    <!--    Inventory-->
    <string name="inventory_title">Inventory</string>

    <!--    Profile-->
    <string name="profile_title">Profile</string>

    <string name="hint_nama">Nama</string>
    <string name="hint_nim">NIM</string>
    <string name="hint_jurusan">Jurusan</string>
    <string name="hint_jenis_kelamin">Jenis Kelamin</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_tanggal_lahir">Tanggal Lahir</string>
    <string name="title_main">My Notes</string>
    <string name="button_save">Save</string>
    <string name="close">Close</string>
    <string name="empty_not_saved">Note discarded</string>
    <string name="title_display_form">Tampilan Form</string>
    <string name="title_registraton_form">Form Registrasi</string>
    <string name="title_home">Registration Form</string>
    <string name="isi_form">Isi Form</string>

    <string name="jk_laki">Laki-Laki</string>
    <string name="jk_perempuan">Perempuan</string>
    <string name="jk_lain">Lainnya</string>

    <string name="tanggal">Tgl</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="home_text1">According to all known laws of avi...</string>
    <string name="home_text2">there is no way a bee should be...</string>
    <string name="home_text3">Its wings are too small to...</string>
    <string name="username">Username</string>
    <string name="konenhizer">Konenhizer</string>
    <string name="id">ID</string>
    <string name="_1910511106">1910511106</string>
    <string name="region">Region</string>
    <string name="asia">Asia</string>
    <string name="halo_4_is_out_on_pc">Halo 4 is Out On PC</string>
    <string name="minor_bug_fixes">Minor Bug Fixes</string>
    <string name="upcoming_maps">Upcoming Maps</string>
    <string name="online_friends">Online Friends</string>
    <string name="active_users">Active Users</string>
    <string name="new_posts">New Posts</string>
    <string name="_62127">62127</string>
    <string name="_1021">1021</string>
    <string name="kills">Kill</string>
    <string name="deaths">Death</string>
    <string name="_31">31</string>
    <string name="assists">Assist</string>
    <string name="score">Score</string>
</resources>